Alert words: Fix alert word list width for smaller display
Alert word card width is too small and looks bad for smaller
displays, So fix width for smaller display devices with appropriate
width property

--- a/static/styles/settings.scss
+++ b/static/styles/settings.scss
@@ -583,6 +583,9 @@ input[type=checkbox].inline-block {
     margin: 2px;
     width: 50%;
     padding: 0px 5px 0px 10px;
+    @media (max-width: 600px) {
+        width: 96%;
+    }
 }
 
 .green-bg {
